--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,11 +10,14 @@ dependencies:
   get: 4.6.5
   flutter: 
     sdk: flutter
+  http: ^1.1.0
 
 dev_dependencies: 
+  build_runner: ^2.4.8
   flutter_lints: ^2.0.0
   flutter_test: 
     sdk: flutter
+  mockito: ^5.4.2
   test: ^1.24.1
 
 flutter: 
